--- a/index.html
+++ b/index.html
@@ -17,23 +17,25 @@
 
 <body class="inter-family">
     <!--Header-->
-    <header class="bg-[#00AFE1] min-h-screen relative">
+    <header class="bg-[#00AFE1] pb-[117px] relative max-[500px]:pb-[50px]">
         <nav class="w-full py-[20px] bg-white items-center flex justify-center">
             <img src="./assets/image/svg/nav-logo.svg" alt="nav-logo">
             <p class="font-bold text-[22px] leading-[100%]">Floating World</p>
         </nav>
-        <img class="w-full max-w-[289px] absolute left-0 bottom-[10%]" src="./assets/image/png/header-left-layer.png"
-            alt="header-left-layer">
-        <img class="w-full max-w-[170px] absolute left-[120px] bottom-[47%]"
+        <img class="w-full max-w-[289px] absolute left-0 bottom-[10%] max-[992px]:max-w-[215px] max-[768px]:hidden"
+            src="./assets/image/png/header-left-layer.png" alt="header-left-layer">
+        <img class="w-full max-w-[170px] absolute left-[120px] bottom-[53%] max-[1100px]:left-[0] max-[992px]:hidden "
             src="./assets/image/png/haeder-left-circle.png" alt="haeder-left-circle">
-        <div class="container mx-auto mt-[134px]">
-            <div>
-                <p class="max-w-[824px] font-bold text-[100px] leading-[104px] text-white text-center mx-auto">Scale &
+        <div class="container mx-auto mt-[134px] max-[500px]:mt-[50px]">
+            <div class="relative z-10">
+                <p
+                    class="max-w-[824px] font-bold text-[100px] leading-[104px] text-white text-center mx-auto max-[650px]:text-[70px] max-[650px]:leading-[70px] max-[425px]:text-[50px] max-[425px]:leading-[50px]">
+                    Scale &
                     grow with ease</p>
-                <p class="font-medium text-[26px] leading-[100%] text-white text-center pt-[13px]">Monthly web
+                <p class="font-medium text-[26px] leading-[100%] text-white text-center pt-[13px] max-[495px]:text-[16px]">Monthly web
                     maintenance packages for businesses. Cancel anytime</p>
                 <button class="px-[49px] py-[17.5px] font-semibold text-[20px] border border-black rounded-[14px] 
-            bg-gradient-to-b from-[#000000] to-[#393939] text-white mx-auto justify-center flex mt-[40px]">See
+            bg-gradient-to-b from-[#000000] to-[#393939] text-white mx-auto justify-center flex mt-[40px] max-[500px]:py-[7.5px] max-[500px]:px-[26px] max-[500px]:text-[14px] max-[500px]:mt-[30px]">See
                     Plans</button>
                 <div class="flex gap-[13px] justify-center mt-[21px]">
                     <div class="h-[12px] w-[12px] rounded-full bg-[#FF0000]"></div>
@@ -41,66 +43,65 @@
                 </div>
             </div>
         </div>
-        <img class="absolute right-0 bottom-[10%] max-w-[442px] w-full" src="./assets/image/png/header-right-layer.png"
-            alt="header-right-layer">
+        <img class="absolute right-0 bottom-[10%] max-w-[442px] w-full max-[992px]:max-w-[320px] max-[768px]:hidden"
+            src="./assets/image/png/header-right-layer.png" alt="header-right-layer">
     </header>
 
     <!--Section-slider-->
-    <section class="min-h-screen overflow-hidden">
+    <!-- <section class="bg-[#F5F5F5] overflow-hidden">
         <div class="slider my-[19px] ">
             <div>
                 <div class="max-w-[249px] w-full items-center flex justify-center relative">
                     <div class="h-[9.7px] max-w-[9.7px] bg-[#02AEDF] rotate-45 w-full absolute left-0"></div>
-
-                    <img src="./assets/image/svg/slider-img-1.svg" alt="slider-img-1">
+                    <img src="./assets/image/png/slider-img-1.png" alt="slider-img-1">
                     <div class="h-[9.7px] max-w-[9.7px] bg-[#02AEDF] rotate-45 w-full absolute right-0"></div>
                 </div>
             </div>
             <div>
                 <div class="max-w-[194px] w-full items-center flex justify-center relative">
-                    <img src="./assets/image/svg/slider-img-2.svg" alt="slider-img-2">
+                    <img src="./assets/image/png/slider-img-2.png" alt="slider-img-2">
                     <div class="h-[9.7px] max-w-[9.7px] bg-[#02AEDF] rotate-45 w-full absolute right-0"></div>
                 </div>
             </div>
             <div>
                 <div class="max-w-[286px] w-full items-center flex justify-center relative">
-                    <img src="./assets/image/svg/slider-img-3.svg" alt="slider-img-3">
+                    <img src="./assets/image/png/slider-img-3.png" alt="slider-img-3">
                     <div class="h-[9.7px] max-w-[9.7px] bg-[#02AEDF] rotate-45 w-full absolute right-0"></div>
                 </div>
             </div>
             <div>
                 <div class="max-w-[243px] w-full items-center flex justify-center relative">
-                    <img src="./assets/image/svg/slider-img-4.svg" alt="slider-img-4">
+                    <img src="./assets/image/png/slider-img-4.png" alt="slider-img-4">
                     <div class="h-[9.7px] max-w-[9.7px] bg-[#02AEDF] rotate-45 w-full absolute right-0"></div>
                 </div>
             </div>
             <div>
                 <div class="max-w-[249px] w-full items-center flex justify-center relative">
-                    <img src="./assets/image/svg/slider-img-5.svg" alt="slider-img-5">
+                    <img src="./assets/image/png/slider-img-5.png" alt="slider-img-5">
                     <div class="h-[9.7px] max-w-[9.7px] bg-[#02AEDF] rotate-45 w-full absolute right-0"></div>
                 </div>
             </div>
             <div>
                 <div class="max-w-[236px] w-full items-center flex justify-center relative">
-                    <img src="./assets/image/svg/slider-img-6.svg" alt="slider-img-6">
+                    <img src="./assets/image/png/slider-img-6.png" alt="slider-img-6">
                     <div class="h-[9.7px] max-w-[9.7px] bg-[#02AEDF] rotate-45 w-full absolute right-0"></div>
                 </div>
             </div>
             <div>
                 <div class="max-w-[249px] w-full items-center flex justify-center relative">
-                    <img src="./assets/image/svg/slider-img-7.svg" alt="slider-img-7">
+                    <img src="./assets/image/png/slider-img-7.png" alt="slider-img-7">
                     <div class="h-[9.7px] max-w-[9.7px] bg-[#02AEDF] rotate-45 w-full absolute right-0"></div>
                 </div>
             </div>
             <div>
                 <div class="max-w-[249px] w-full items-center flex justify-center relative">
-                    <img src="./assets/image/svg/slider-img-8.svg" alt="slider-img-8">
+                    <img src="./assets/image/png/slider-img-8.png" alt="slider-img-8">
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--Section-support-->
-    <section class="bg-[#F5F5F5] py-[151px]">
+    <!-- <section class="bg-[#F5F5F5] py-[151px]">
         <div class="container mx-auto">
             <h2 class="max-w-[880px] font-extrabold text-[67px] leading-[77px] text-center mx-auto m-0 pb-4">We didn’t
                 reinvent
@@ -137,10 +138,10 @@
             bg-gradient-to-b from-[#000000] to-[#393939] text-white mx-auto justify-center flex mt-[78px]">See
                 Plans</button>
         </div>
-    </section>
+    </section> -->
 
     <!--Section-money-talk-->
-    <section class="pb-[101px]">
+    <!-- <section class="pb-[101px]">
         <div class="container mx-auto">
             <div>
                 <p class="m-0 text-[22px] leading-[100%] font-medium text-center pt-[119px] pb-[67px]">They said it best
@@ -159,10 +160,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!--Section-better-->
-    <section class="bg-[#F5F5F5] pt-[110px] pb-[119px]">
+    <!-- <section class="bg-[#F5F5F5] pt-[110px] pb-[119px]">
         <div class="container mx-auto">
             <div>
                 <h2 class="font-extrabold text-[67px] leading-[73px] max-w-[614px] text-center mx-auto ">It’s “you’ll
@@ -176,10 +177,10 @@
                     Plans</button>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!--Section-6-->
-    <section class="pt-[133px] pb-[138px]">
+    <!-- <section class="pt-[133px] pb-[138px]">
         <div class="container mx-auto">
             <div class="flex flex-wrap mx-[-12px]">
                 <div class="w-1/2">
@@ -214,10 +215,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!--Section-Membership-->
-    <section class="bg-[#F5F5F5] pt-[131px] pb-[123px]">
+    <!-- <section class="bg-[#F5F5F5] pt-[131px] pb-[123px]">
         <div class="container mx-auto">
             <h2 class="font-extrabold text-[67px] leading-[82px] text-center pb-[82px]">Membership Benefits</h2>
             <div class="flex flex-wrap mx-[-12px]">
@@ -283,10 +284,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!--Section-app-web-ai-->
-    <section class="min-h-screen pt-[212px] pb-[129px]">
+    <!-- <section class="min-h-screen pt-[212px] pb-[129px]">
         <div class="container mx-auto">
             <h2 class="font-bold text-[67px] leading-[82px] text-center">App, web, & AI coding</h2>
             <div class="flex flex-wrap gap-[12px] justify-center mt-[63px]">
@@ -446,10 +447,10 @@
                 class="px-[46.5px] py-[23px] font-semibold text-[20px] leading-[100%] border border-black rounded-[14px] bg-gradient-to-b from-[#000000] to-[#393939] text-white mx-auto flex mt-[77px]">Download
                 Case Studies</button>
         </div>
-    </section>
+    </section> -->
 
     <!--Section-join-world-->
-    <section class="bg-[#F5F5F5] pt-[261px] pb-[189px]">
+    <!-- <section class="bg-[#F5F5F5] pt-[261px] pb-[189px]">
         <div class="container mx-auto">
             <div class="flex gap-[32px]">
                 <div class="bg-[#222222] max-w-[476px] w-full pb-[59px] rounded-[24px] pl-[42px] pt-[65px]">
@@ -512,10 +513,10 @@
                         a call</button>
                 </div>
             </div>
-    </section>
+    </section> -->
 
     <!--Section-asked-question-->
-    <section class="bg-[#F5F5F5]">
+    <!-- <section class="bg-[#F5F5F5]">
         <div class="container mx-auto ">
             <div class="flex flex-wrap mx-[-12px]">
                 <div class="w-1/2 px-[12px]">
@@ -539,8 +540,6 @@
                                 </div>
                             </div>
                         </div>
-
-                        <!-- Accordion Item 2 -->
                         <div class="max-w-[600px]">
                             <button onclick="toggleAccordion(2)"
                                 class="w-full flex justify-between items-center py-5 text-slate-800">
@@ -557,8 +556,6 @@
                                 </div>
                             </div>
                         </div>
-
-                        <!-- Accordion Item 3 -->
                         <div class="max-w-[600px]">
                             <button onclick="toggleAccordion(3)"
                                 class="w-full flex justify-between items-center py-5 text-slate-800">
@@ -575,8 +572,6 @@
                                 </div>
                             </div>
                         </div>
-
-                        <!-- Accordion Item 4 -->
                         <div class="max-w-[600px]">
                             <button onclick="toggleAccordion(4)"
                                 class="w-full flex justify-between items-center py-5 text-slate-800">
@@ -593,8 +588,6 @@
                                 </div>
                             </div>
                         </div>
-
-                        <!-- Accordion Item 5 -->
                         <div class="max-w-[600px]">
                             <button onclick="toggleAccordion(5)"
                                 class="w-full flex justify-between items-center py-5 text-slate-800">
@@ -611,8 +604,6 @@
                                 </div>
                             </div>
                         </div>
-
-                        <!-- Accordion Item 6 -->
                         <div class="max-w-[600px]">
                             <button onclick="toggleAccordion(6)"
                                 class="w-full flex justify-between items-center py-5 text-slate-800">
@@ -629,8 +620,6 @@
                                 </div>
                             </div>
                         </div>
-
-                        <!-- Accordion Item 7 -->
                         <div class="max-w-[600px]">
                             <button onclick="toggleAccordion(7)"
                                 class="w-full flex justify-between items-center py-5 text-slate-800">
@@ -647,8 +636,6 @@
                                 </div>
                             </div>
                         </div>
-
-                        <!-- Accordion Item 8 -->
                         <div class="max-w-[600px]">
                             <button onclick="toggleAccordion(8)"
                                 class="w-full flex justify-between items-center py-5 text-slate-800">
@@ -688,10 +675,10 @@
                     </div>
                 </div>
             </div>
-    </section>
+    </section> -->
 
     <!--footer-->
-    <footer class="bg-[#F5F5F5] py-[250px]">
+    <!-- <footer class="bg-[#F5F5F5] py-[250px]">
         <div class="container mx-auto">
             <div>
                 <p class="font-bold text-[103px] leading-[82px] flex mx-auto justify-center">Floatingworld Inc.™</p>
@@ -714,7 +701,7 @@
                 </ul>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
